eliminated VM options (GC) for Mac